--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Geolocation Assignment</title>
 		<link rel=stylesheet href="geolocation.css" />
 	    <script type="text/javascript" src="js/geolocation.js"></script>
-	        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOfw2qcUZlRwI-rlauKJb7pJr388ihyT0&callback=loaddata"
+	        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOfw2qcUZlRwI-rlauKJb7pJr388ihyT0&callback=showdata"
     async defer />
 	</head>
 	<body>
